modifications in 'lifestyle'

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                    <li class="nav-item"><a href="#hobbies" class="nav-link">Hobbies</a></li>
+                    <li class="nav-item"><a href="#lifestyle" class="nav-link">Lifestyle</a></li>
                     <li class="nav-item"><a href="#connect" class="nav-link">Connect</a></li>
                 </ul>
             </div>
@@ -143,22 +143,22 @@
             </div>
         </section>
 
-        <!--===== HOBBIES =====-->
-        <section class="hobbies section" id="hobbies">
-            <h2 class="section-title">Hobbies</h2>
+        <!--===== LIFESTYLE =====-->
+        <section class="lifestyle section" id="lifestyle">
+            <h2 class="section-title">Lifestyle</h2>
 
             <div class="gallery-container bd-grid">
 
                 <div class="gallery grid">
                     <div class="box row-2 box-box"
-                        style="background-image: url(https://images.unsplash.com/photo-1633956257840-fdd7a68222a7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=627&q=80);">
+                        style="background-image: url(assets/box.png);">
                         Box</div>
                     <div class="box col-2 box-code"
                         style="background-image: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);">
                         Code</div>
-                    <div class="box box-live"
-                        style="background-image: url(https://images.unsplash.com/photo-1506869640319-fe1a24fd76dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);">
-                        Live</div>
+                    <div class="box box-pray"
+                        style="background-image: url(assets/pray.png);">
+                        Pray</div>
                     <div class="box row-2 box-grapple"
                         style="background-image: url(https://images.unsplash.com/photo-1602827113876-839bcf3ccb3a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);">
                         Grapple</div>
@@ -168,9 +168,9 @@
                     <div class="box box-understand"
                         style="background-image: url(https://images.unsplash.com/photo-1566314748684-1e536fe1a148?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);">
                         Learn</div>
-                    <div class="box col-2 box-rest"
-                        style="background-image: url(https://images.unsplash.com/photo-1471560090527-d1af5e4e6eb6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);">
-                        Rest</div>
+                    <div class="box col-2 box-ponder"
+                        style="background-image: url(assets/ponder.png);">
+                        Ponder</div>
                 </div>
             </div>
         </section>
@@ -207,25 +207,25 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer section">
-        <div class="footer__container bd-grid">
-            <div class="footer__data">
+        <div class="footer-container bd-grid">
+            <div class="footer-data">
                 <img class="footer-logo" src="assets/z-logo.png" alt="">
-                <p class="footer__text">Portfolio Website</p>
+                <p class="footer-text">Portfolio Website</p>
             </div>
 
-            <div class="footer__data">
-                <h2 class="footer__title">EXPLORE</h2>
+            <div class="footer-data">
+                <h2 class="footer-title">EXPLORE</h2>
                 <ul>
-                    <li><a href="#home" class="footer__link">Home</a></li>
-                    <li><a href="#about" class="footer__link">About</a></li>
-                    <li><a href="#skills" class="footer__link">Skills</a></li>
-                    <li><a href="#projects" class="footer__link">Projects</a></li>
-                    <li><a href="#connect" class="footer__link">Connect</a></li>
+                    <li><a href="#home" class="footer-link">Home</a></li>
+                    <li><a href="#about" class="footer-link">About</a></li>
+                    <li><a href="#skills" class="footer-link">Skills</a></li>
+                    <li><a href="#projects" class="footer-link">Projects</a></li>
+                    <li><a href="#connect" class="footer-link">Connect</a></li>
                 </ul>
             </div>
 
-            <div class="footer__data">
-                <h2 class="footer__title">ADDRESS</h2>
+            <div class="footer-data">
+                <h2 class="footer-title">ADDRESS</h2>
 
                 <div>
                     <i class='bx bx-location-plus'></i> Palghar, Maharashtra
