updated 'about' section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 </div>
 
                 <div>
-                    <h2 class="about-subtitle">Zeeshan Haque</h2>
+                    <h2 class="about-title">Zeeshan Haque</h2>
+                    <h3 class="about-subtitle">Student at <br> Sardar Patel Institute of Technology, Andheri(W)</h3>
                     <span class="about-profession">Aspiring Software Dev. <br> MMA Enthusiast <br>
                         Truth Seeker </span>
                     <p class="about-text">As an aspiring Software Developer, my world revolves around crafting elegant
@@ -77,7 +78,7 @@
                     </p>
 
                     <div class="resume">
-                        <a href="assets/MyResume.pdf" download><button class="resume-button">My Résumé</button></a>
+                        <a href="assets/ZeeshanHaque_Resume.pdf" download><button class="resume-button">My Résumé</button></a>
                     </div>
                 </div>
             </div>
@@ -220,6 +221,7 @@
                     <li><a href="#about" class="footer-link">About</a></li>
                     <li><a href="#skills" class="footer-link">Skills</a></li>
                     <li><a href="#projects" class="footer-link">Projects</a></li>
+                    <li><a href="#lifestyle" class="footer-link">Lifestyle</a></li>
                     <li><a href="#connect" class="footer-link">Connect</a></li>
                 </ul>
             </div>
