added 'footer' section

--- a/NewsPlus/index.html
+++ b/NewsPlus/index.html
@@ -86,6 +86,63 @@
         </div>
     </template>
 
+    <footer class="footer">
+        <div class="footer-container container">
+            <div class="footer-data">
+                <div class="footer-logos flex">
+                    <img class="footer-logo" src="assets/NewsPlusLogoShort.png" alt="">
+                    <img class="footer-logo" src="../assets/z-logo.png" alt="">
+                </div>
+                <p class="footer-text">News+</p>
+            </div>
+
+            <div class="footer-data">
+                <h2 class="footer-title">CATEGORIES</h2>
+                <div class="footer-categories flex">
+                    <ul class="footer-category grid">
+                        <li class="hover-link nav-item flex" id="national" onclick="onNavItemClick('national')">National</li>
+                        <li class="hover-link nav-item flex" id="business" onclick="onNavItemClick('business')">Business</li>
+                        <li class="hover-link nav-item flex" id="sports" onclick="onNavItemClick('sports')">Sports</li>
+                        <li class="hover-link nav-item flex" id="world" onclick="onNavItemClick('world')">
+                            World
+                        </li>
+                    </ul>
+                    <ul class="footer-category grid">
+                        <li class="hover-link nav-item flex" id="politics" onclick="onNavItemClick('politics')">Politics</li>
+                        <li class="hover-link nav-item flex" id="science" onclick="onNavItemClick('science')">Science</li>
+                        <li class="hover-link nav-item flex" id="startup" onclick="onNavItemClick('startup')">Startup</li>
+                        <li class="hover-link nav-item flex" id="hatke" onclick="onNavItemClick('hatke')">Hatke</li>
+                    </ul>
+                    <ul class="footer-category grid">
+                        <li class="hover-link nav-item flex" id="miscellaneous" onclick="onNavItemClick('miscellaneous')">Miscellaneous</li>
+                        <li class="hover-link nav-item flex" id="entertainment" onclick="onNavItemClick('entertainment')">
+                            Entertainment
+                        </li>
+                        <li class="hover-link nav-item flex" id="technology" onclick="onNavItemClick('technology')">Technology</li>
+                        <li class="hover-link nav-item flex" id="automobile" onclick="onNavItemClick('automobile')">
+                            Automobile
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-data">
+                <h2 class="footer-title">FOLLOW NEWS+</h2>
+                <div class="connect_icons flex">
+                    <a href="https://www.instagram.com/zeeshanhaq._/" target="_blank"><img
+                            src="../assets/social-icons/instagram-icon.png" class="social-icon" alt="insta-icon"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100005038604896" target="_blank"><img
+                            src="../assets/social-icons/facebook-icon.png" class="social-icon" alt="fb-icon"></a>
+                </div>
+            </div>
+
+        </div>
+        <div class="copyright-details container">
+            <hr>
+            <div>&copy; 2023 News+ &nbsp; | &nbsp; Developed by Zeeshan Haque</div>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
