improved 'Projects' section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     </p>
 
                     <div class="resume">
-                        <a href="assets/ZeeshanHaque_Resume.pdf" download><button class="resume-button">My Résumé</button></a>
+                        <a href="assets/ZeeshanHaque_Resume.pdf" download><button class="resume-button">My
+                                Résumé</button></a>
                     </div>
                 </div>
             </div>
@@ -124,9 +125,26 @@
                     <img src="assets/NewsPlus-work.png" class="projects-img" alt="">
 
                     <div class="projects-about">
-                        <a href="https://zeeshanhaque.github.io/NewsPlus/index.html" class="button" target="_blank"
-                            rel="noopener noreferrer" class="projects-about-name"><strong>News+</strong> {HTML, CSS,
-                            JS}<span class="projects-link">🔗</span></a>
+                        <p>
+                            <span class="project-title">'News+'</span> features real-time news articles
+                            across various categories and displays current weather information.
+                        </p>
+                        <div class="skills-container bd-grid">
+                            <div class="projects-skills skills-box">
+                                <span class="skills-name">HTML</span>
+                                <span class="skills-name">CSS</span>
+                                <span class="skills-name">JavaScript</span>
+                            </div>
+                        </div>
+
+                        <div class="project-links flex">
+                            <a href="https://zeeshanhaque.github.io/NewsPlus/" class="button" target="_blank"
+                                rel="noopener noreferrer" class="projects-about-name">Visit</a>
+                            <a href="https://github.com/zeeshanhaque/NewsPlus" class="button" target="_blank"
+                                rel="noopener noreferrer" class="projects-about-name"><span class="projects-link"><img
+                                        src="assets/social-icons/github-icon.png" alt=""></span></a>
+
+                        </div>
                     </div>
                 </div>
 
@@ -134,10 +152,24 @@
                     <img src="assets/IdeaSpace-Work.png" class="projects-img" alt="">
 
                     <div class="projects-about">
-                        <a href="https://github.com/zeeshanhaque/IdeaSpace" class="button" target="_blank"
-                            rel="noopener noreferrer" class="projects-about-name"><strong>IdeaSpace</strong> {Flask,
-                            SQLAlchemy}<span class="projects-link"><img src="assets/social-icons/github-icon.png"
-                                    alt=""></span></a>
+                        <p>
+                            <span class="project-title">'IdeaSpace'</span> is a blogging application, allowing
+                            an admin to upload and edit their blogs. Users can read blogs and contact the admin through
+                            mail.
+                        </p>
+                        <div class="skills-container bd-grid">
+                            <div class="projects-skills skills-box">
+                                <span class="skills-name">Flask</span>
+                                <span class="skills-name">SQLAlchemy</span>
+                                <span class="skills-name">SQL</span>
+                                <span class="skills-name">Flask-Mail</span>
+                            </div>
+                        </div>
+                        <div class="project-links flex">
+                            <a href="https://github.com/zeeshanhaque/IdeaSpace" class="button" target="_blank"
+                                rel="noopener noreferrer" class="projects-about-name"><span class="projects-link"><img
+                                        src="assets/social-icons/github-icon.png" alt=""></span></a>
+                        </div>
                     </div>
                 </div>
 
@@ -151,14 +183,12 @@
             <div class="gallery-container bd-grid">
 
                 <div class="gallery grid">
-                    <div class="box row-2 box-box"
-                        style="background-image: url(assets/box.png);">
+                    <div class="box row-2 box-box" style="background-image: url(assets/box.png);">
                         Box</div>
                     <div class="box col-2 box-code"
                         style="background-image: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);">
                         Code</div>
-                    <div class="box box-pray"
-                        style="background-image: url(assets/pray.png);">
+                    <div class="box box-pray" style="background-image: url(assets/pray.png);">
                         Pray</div>
                     <div class="box row-2 box-grapple"
                         style="background-image: url(https://images.unsplash.com/photo-1602827113876-839bcf3ccb3a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);">
@@ -169,8 +199,7 @@
                     <div class="box box-understand"
                         style="background-image: url(https://images.unsplash.com/photo-1566314748684-1e536fe1a148?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);">
                         Learn</div>
-                    <div class="box col-2 box-ponder"
-                        style="background-image: url(assets/ponder.png);">
+                    <div class="box col-2 box-ponder" style="background-image: url(assets/ponder.png);">
                         Ponder</div>
                 </div>
             </div>
@@ -198,10 +227,9 @@
                     <a href="https://www.linkedin.com/in/zeeshan-haque-8972ab288/" target="_blank"><img
                             src="assets/social-icons/linkedin-icon.png" class="social-icon" alt="linkedin"></a>
                 </div>
-                <div class="connect-whatsapp flex">
-                    <a href="https://api.whatsapp.com/send?phone=918208684635&text=Hi!" target="_blank">'Hi!' me on <img
-                            src="assets/social-icons/whatsapp-icon.png" alt=""></a>
-                </div>
+                <a href="https://api.whatsapp.com/send?phone=918208684635&text=Hi!" target="_blank"
+                    class="connect-whatsapp flex">'Hi!' me on <img src="assets/social-icons/whatsapp-icon.png"
+                        alt=""></a>
             </div>
         </section>
     </main>
