--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <header class="navigation-header">
         <nav class="nav bd-grid">
             <div>
-
-                <a href="#" class="nav-logo"><img src="assets/z-logo.png" alt=""></a>
+                <a href="#" class="nav-logo"><img class="flex" src="assets/z-logo.png" alt=""></a>
             </div>
 
             <div class="nav-menu" id="nav-menu">
@@ -61,16 +60,13 @@
                     <h2 class="about-title">Zeeshan Haque</h2>
                     <h3 class="about-subtitle">Student at <br> Sardar Patel Institute of Technology, Andheri(W)</h3>
                     <span class="about-profession">Aspiring Software Dev. <br> MMA Enthusiast <br>
-                        Truth Seeker </span>
+                        Wisdom Seeker </span>
                     <p class="about-text">As an aspiring Software Developer, my world revolves around crafting elegant
                         solutions. I relish the feeling of transforming problems into efficient code, and witnessing
                         them come to life.
                     </p>
 
-                    <p class="about-text">On the flip side, I embrace the rigor of martial arts, where every bout is a
-                        high-speed chess match of strategy and precision; an ultimate test of realism and mental
-                        toughness. Practicing MMA fosters confidence and inspires me to push my limits in and out of the
-                        coding arena.
+                    <p class="about-text">Beyond the screen, I'm drawn to the world of Mixed Martial Arts—finding inspiration in the artistry of Brazilian Jiu-Jitsu, the Precision of Boxing, and the Toughness of Wrestling. Practicing MMA fosters confidence and inspires me to push my limits. In the spirit of constant improvement, I'm not just honing my coding skills but also delving into the complexities of life through Philosophy.
                     </p>
 
                     <p class="about-text">Seeking to be inspired, to work hard for things that are worth it, and to to
@@ -94,19 +90,20 @@
 
                     <h3 class="skills-subtitle">Languages</h3>
                     <span class="skills-name">Python</span>
-                    <span class="skills-name">C++</span>
                     <span class="skills-name">Java</span>
 
                     <h3 class="skills-subtitle">Web Development</h3>
+                    <span class="skills-name">Flask</span>
                     <span class="skills-name">HTML</span>
                     <span class="skills-name">CSS</span>
                     <span class="skills-name">JavaScript</span>
-                    <span class="skills-name">Flask</span>
+                    <span class="skills-name">RESTful Web Services</span>
 
                     <h3 class="skills-subtitle">DBMS</h3>
                     <span class="skills-name">MySQL</span>
+                    <span class="skills-name">MongoDB</span>
 
-                    <h3 class="skills-subtitle">Tools</h3>
+                    <h3 class="skills-subtitle">Version Control</h3>
                     <span class="skills-name">Git</span>
                     <span class="skills-name">GitHub</span>
 
@@ -161,7 +158,7 @@
                             <div class="projects-skills skills-box">
                                 <span class="skills-name">Flask</span>
                                 <span class="skills-name">SQLAlchemy</span>
-                                <span class="skills-name">SQL</span>
+                                <span class="skills-name">MySQL</span>
                                 <span class="skills-name">Flask-Mail</span>
                             </div>
                         </div>
@@ -184,23 +181,23 @@
 
                 <div class="gallery grid">
                     <div class="box row-2 box-box" style="background-image: url(assets/box.png);">
-                        Box</div>
+                        <span>Box</span></div>
                     <div class="box col-2 box-code"
                         style="background-image: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);">
-                        Code</div>
+                        <span>Code</span></div>
                     <div class="box box-pray" style="background-image: url(assets/pray.png);">
-                        Pray</div>
+                        <span>Pray</span></div>
                     <div class="box row-2 box-grapple"
                         style="background-image: url(https://images.unsplash.com/photo-1602827113876-839bcf3ccb3a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);">
-                        Grapple</div>
+                        <span>Grapple</span></div>
                     <div class="box col-2 box-lift"
                         style="background-image: url(https://images.unsplash.com/photo-1549060279-7e168fcee0c2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);">
-                        Lift</div>
+                        <span>Lift</span></div>
                     <div class="box box-understand"
                         style="background-image: url(https://images.unsplash.com/photo-1566314748684-1e536fe1a148?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);">
-                        Learn</div>
+                        <span>Learn</span></div>
                     <div class="box col-2 box-ponder" style="background-image: url(assets/ponder.png);">
-                        Ponder</div>
+                        <span>Ponder</span></div>
                 </div>
             </div>
         </section>
@@ -219,16 +216,16 @@
 
                 <div class="connect_icons flex">
                     <a href="https://www.instagram.com/zeeshanhaq._/" target="_blank"><img
-                            src="assets/social-icons/instagram-icon.png" class="social-icon" alt="insta-icon"></a>
+                            src="assets/social-icons/instagram.png" class="social-icon" alt="insta-icon"></a>
                     <a href="https://www.facebook.com/profile.php?id=100005038604896" target="_blank"><img
-                            src="assets/social-icons/facebook-icon.png" class="social-icon" alt="fb-icon"></a>
+                            src="assets/social-icons/facebook.png" class="social-icon" alt="fb-icon"></a>
                     <a href="https://github.com/zeeshanhaque" target="_blank"><img
-                            src="assets/social-icons/github-icon.png" class="social-icon" alt="github-icon"></a>
+                            src="assets/social-icons/github.png" class="social-icon" alt="github-icon"></a>
                     <a href="https://www.linkedin.com/in/zeeshan-haque-8972ab288/" target="_blank"><img
-                            src="assets/social-icons/linkedin-icon.png" class="social-icon" alt="linkedin"></a>
+                            src="assets/social-icons/linkedin.png" class="social-icon" alt="linkedin"></a>
                 </div>
                 <a href="https://api.whatsapp.com/send?phone=918208684635&text=Hi!" target="_blank"
-                    class="connect-whatsapp flex">'Hi!' me on <img src="assets/social-icons/whatsapp-icon.png"
+                    class="connect-whatsapp flex">'Hi!' me on <img class="whatsapp-icon" src="assets/social-icons/whatsapp-icon.png"
                         alt=""></a>
             </div>
         </section>
@@ -258,7 +255,7 @@
                 <h2 class="footer-title">ADDRESS</h2>
 
                 <div>
-                    <i class='bx bx-location-plus'></i> Palghar, Maharashtra
+                    <i class='bx bx-location-plus'></i> Dahanu, MH, India
                 </div>
             </div>
 
