Added Internship details in the About Section

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <div class="about-container bd-grid">
                 <div class="about-img">
                     <img src="assets/my-pic.jpg" alt="">
+                    <h2 class="about-title">Zeeshan Haque</h2>
+                    <h3 class="about-subtitle">Intern at <p><a href="https://group.bnpparibas/en/" class="institution ins-bnp">BNP Paribas</a></p></h3>
+                    <h3 class="about-subtitle">Student at <p><a href="https://www.spit.ac.in/" class="institution ins-spit">Sardar Patel Institute of Technology</a></p></h3>
                 </div>
 
                 <div>
-                    <h2 class="about-title">Zeeshan Haque</h2>
-                    <h3 class="about-subtitle">Student at <br> Sardar Patel Institute of Technology, Andheri(W)</h3>
-                    <span class="about-profession">Aspiring Software Dev. <br> MMA Enthusiast <br>
-                        Wisdom Seeker </span>
+                    <span class="about-profession">Aspiring Software Dev. <br>MMA Enthusiast <br>Wisdom Seeker </span>
                     <p class="about-text">As an aspiring Software Developer, my world revolves around crafting elegant
                         solutions. I relish the feeling of transforming problems into efficient code, and witnessing
                         them come to life.
