Added a Project and Updated Resume

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                 <div class="about-img">
                     <img src="assets/my-pic.jpg" alt="">
                     <h2 class="about-title">Zeeshan Haque</h2>
-                    <h3 class="about-subtitle">Intern at <p><a href="https://group.bnpparibas/en/" class="institution ins-bnp">BNP Paribas</a></p></h3>
-                    <h3 class="about-subtitle">Student at <p><a href="https://www.spit.ac.in/" class="institution ins-spit">Sardar Patel Institute of Technology</a></p></h3>
+                    <h3 class="about-subtitle">Market Risk Analyst at <p><a href="https://group.bnpparibas/en/"
+                                class="institution ins-bnp">BNP Paribas</a></p>
+                    </h3>
                 </div>
 
                 <div>
@@ -66,7 +67,11 @@
                         them come to life.
                     </p>
 
-                    <p class="about-text">Beyond the screen, I'm drawn to the world of Mixed Martial Arts—finding inspiration in the artistry of Brazilian Jiu-Jitsu, the Precision of Boxing, and the Toughness of Wrestling. Practicing MMA fosters confidence and inspires me to push my limits. In the spirit of constant improvement, I'm not just honing my coding skills but also delving into the complexities of life through Philosophy.
+                    <p class="about-text">Beyond the screen, I'm drawn to the world of Mixed Martial Arts—finding
+                        inspiration in the Artistry of Brazilian Jiu-Jitsu, the Precision of Boxing, and the Toughness
+                        of Wrestling. Practicing MMA fosters confidence and inspires me to push my limits. In the spirit
+                        of constant improvement, I'm not just honing my coding skills but also delving into the
+                        complexities of life through Philosophy.
                     </p>
 
                     <p class="about-text">Seeking to be inspired, to work hard for things that are worth it, and to to
@@ -87,6 +92,12 @@
 
             <div class="skills-container bd-grid">
                 <div class="skills-box">
+
+                    <h3 class="skills-subtitle">Salesforce.com</h3>
+                    <span class="skills-name">Salesforce Admin</span>
+                    <span class="skills-name">Apex</span>
+                    <span class="skills-name">LWC</span>
+                    <span class="skills-name">SOQL</span>
 
                     <h3 class="skills-subtitle">Languages</h3>
                     <span class="skills-name">Python</span>
@@ -118,7 +129,61 @@
 
             <div class="projects-container bd-grid">
 
-                <div class="projects-card">
+                <div class="projects-card flex">
+                    <img src="https://github.com/zeeshanhaque/Football-Manager/blob/main/screenshots/home.png?raw=true" class="projects-img" alt="">
+
+                    <div class="projects-about">
+                        <p>
+                            <span class="project-title">'Football Manager'</span> is a Salesforce-based application designed to manage football-related data, including players, clubs, matches, goals, and transfers.
+                        </p>
+                        <div class="skills-container bd-grid">  
+                            <div class="projects-skills skills-box">
+                                <span class="skills-name">SF Admin</span>
+                                <span class="skills-name">Apex</span>
+                                <span class="skills-name">LWC</span>
+                                <span class="skills-name">SOQL</span>
+                            </div>
+                        </div>
+
+                        <div class="project-links flex">
+                            <a href="https://github.com/zeeshanhaque/Football-Manager" class="button" target="_blank"
+                                rel="noopener noreferrer" class="projects-about-name"><span class="projects-link"><img
+                                        src="assets/social-icons/github-icon.png" alt=""></span></a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="projects-card flex">
+                    <img src="https://github.com/zeeshanhaque/ZenDiary/blob/main/app/static/assets/screenshots/home.png?raw=true"
+                        class="projects-img" alt="">
+
+                    <div class="projects-about">
+                        <p>
+                            <span class="project-title">'ZenDiary'</span> is a web application
+                            that enables users to track their emotional well-being through mood
+                            journaling. It features user authentication, mood entry management, and data
+                            visualization.
+                        </p>
+                        <div class="skills-container bd-grid">
+                            <div class="projects-skills skills-box">
+                                <span class="skills-name">Flask</span>
+                                <span class="skills-name">SQLAlchemy</span>
+                                <span class="skills-name">MySQL</span>
+                                <span class="skills-name">HTML</span>
+                                <span class="skills-name">CSS</span>
+                                <span class="skills-name">JavaScript</span>
+                            </div>
+                        </div>
+                        <div class="project-links flex">
+                            <a href="https://github.com/zeeshanhaque/ZenDiary" class="button" target="_blank"
+                                rel="noopener noreferrer" class="projects-about-name"><span class="projects-link"><img
+                                        src="assets/social-icons/github-icon.png" alt=""></span></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="projects-card flex">
                     <img src="assets/NewsPlus-work.png" class="projects-img" alt="">
 
                     <div class="projects-about">
@@ -145,7 +210,7 @@
                     </div>
                 </div>
 
-                <div class="projects-card">
+                <div class="projects-card flex">
                     <img src="assets/IdeaSpace-Work.png" class="projects-img" alt="">
 
                     <div class="projects-about">
@@ -181,23 +246,30 @@
 
                 <div class="gallery grid">
                     <div class="box row-2 box-box" style="background-image: url(assets/box.png);">
-                        <span>Box</span></div>
+                        <span>Box</span>
+                    </div>
                     <div class="box col-2 box-code"
                         style="background-image: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);">
-                        <span>Code</span></div>
+                        <span>Code</span>
+                    </div>
                     <div class="box box-pray" style="background-image: url(assets/pray.png);">
-                        <span>Pray</span></div>
+                        <span>Pray</span>
+                    </div>
                     <div class="box row-2 box-grapple"
                         style="background-image: url(https://images.unsplash.com/photo-1602827113876-839bcf3ccb3a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);">
-                        <span>Grapple</span></div>
+                        <span>Grapple</span>
+                    </div>
                     <div class="box col-2 box-lift"
                         style="background-image: url(https://images.unsplash.com/photo-1549060279-7e168fcee0c2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);">
-                        <span>Lift</span></div>
+                        <span>Lift</span>
+                    </div>
                     <div class="box box-understand"
                         style="background-image: url(https://images.unsplash.com/photo-1566314748684-1e536fe1a148?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);">
-                        <span>Learn</span></div>
+                        <span>Learn</span>
+                    </div>
                     <div class="box col-2 box-ponder" style="background-image: url(assets/ponder.png);">
-                        <span>Ponder</span></div>
+                        <span>Ponder</span>
+                    </div>
                 </div>
             </div>
         </section>
@@ -219,14 +291,14 @@
                             src="assets/social-icons/instagram.png" class="social-icon" alt="insta-icon"></a>
                     <a href="https://www.facebook.com/profile.php?id=100005038604896" target="_blank"><img
                             src="assets/social-icons/facebook.png" class="social-icon" alt="fb-icon"></a>
-                    <a href="https://github.com/zeeshanhaque" target="_blank"><img
-                            src="assets/social-icons/github.png" class="social-icon" alt="github-icon"></a>
+                    <a href="https://github.com/zeeshanhaque" target="_blank"><img src="assets/social-icons/github.png"
+                            class="social-icon" alt="github-icon"></a>
                     <a href="https://www.linkedin.com/in/zeeshan-haque-8972ab288/" target="_blank"><img
                             src="assets/social-icons/linkedin.png" class="social-icon" alt="linkedin"></a>
                 </div>
                 <a href="https://api.whatsapp.com/send?phone=918208684635&text=Hi!" target="_blank"
-                    class="connect-whatsapp flex">'Hi!' me on <img class="whatsapp-icon" src="assets/social-icons/whatsapp-icon.png"
-                        alt=""></a>
+                    class="connect-whatsapp flex">'Hi!' me on <img class="whatsapp-icon"
+                        src="assets/social-icons/whatsapp-icon.png" alt=""></a>
             </div>
         </section>
     </main>
