Modified responsiveness of Projects section

--- a/index.html
+++ b/index.html
@@ -162,16 +162,12 @@
                         <p>
                             <span class="project-title">'ZenDiary'</span> is a web application
                             that enables users to track their emotional well-being through mood
-                            journaling. It features user authentication, mood entry management, and data
-                            visualization.
+                            journaling.
                         </p>
                         <div class="skills-container bd-grid">
                             <div class="projects-skills skills-box">
                                 <span class="skills-name">Flask</span>
                                 <span class="skills-name">SQLAlchemy</span>
-                                <span class="skills-name">MySQL</span>
-                                <span class="skills-name">HTML</span>
-                                <span class="skills-name">CSS</span>
                                 <span class="skills-name">JavaScript</span>
                             </div>
                         </div>
